Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-70276

Reg[5.9->5.11] font-weight set by style sheet is ignored in QDockWidget title

XMLWordPrintable

    • Windows

      If a new font size is applied to QDockWidget it is no more honored. This works in Qt5.9.4

      attached example shows it.

        1. qtbug70276.jpg
          119 kB
          Friedemann Kleint
        2. qtbug70276.zip
          1 kB
          Friedemann Kleint
        3. QTBUG70276.zip
          6 kB
          Irfan Omair
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            irfan.omair@digia.com Irfan Omair
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes